creating shows section

--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,80 @@
             </ul>
         </div>
     </section>
+    <section class="shows">
+        <ul class="shows__tabs">
+            <li data-tab-button="em_breve" class="shows__tabs__item shows__tabs__item--selected">
+                em breve
+            </li>
+            <li data-tab-button="populares" class="shows__tabs__item">
+                Mais Populares
+            </li>
+            <li data-tab-button="starplus" class="shows__tabs__item">
+                Mais no star+
+            </li>
+        </ul>
+        <ul data-tab-id="em_breve" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./images/em_breve/desencantada.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/em_breve/lobisomem.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/em_breve/sem_limites.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/em_breve/spidey.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/em_breve/the_santa_clauses.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/em_breve/willow.jpg" alt="Bluey">
+            </li>
+        </ul>
+        <ul data-tab-id="populares" class="shows__list shows__list--hide">
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/bluey.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/cavaleira_da_lua.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/o_incrivel_dr_pol.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/obi_wan.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/red.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_populares/tudo_igual_sqn.jpg" alt="Bluey">
+            </li>
+        </ul>
+        <ul data-tab-id="starplus" class="shows__list shows__list--hide">
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/belair.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/libertadores.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/nba.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/os_simpson.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/premier_league.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./images/mais_no_star_plus/the_kardashians.jpg" alt="Bluey">
+            </li>
+        </ul>
+    </section>
+
+    <script src="./script/script.js"></script>
 </body>
 </html>
